--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -30,7 +30,7 @@
 
 .archive__subtitle {
   margin: 1.414em 0 0;
-  padding-bottom: 0.5em;
+  padding-bottom: 0;
   font-size: $type-size-5;
   color: mix(#fff, $gray, 25%);
   border-bottom: 1px solid $border-color;
@@ -41,7 +41,7 @@
 }
 
 .archive__item-title {
-  margin-bottom: 0.em;
+  margin-bottom: -.75em;
   font-family: $sans-serif-narrow;
 
   a + a {
@@ -53,7 +53,7 @@
 .page__content {
 
   .archive__item-title {
-    margin-top: 0em;
+    margin-top: 1em;
     border-bottom: none;
   }
 }
